# ComfyUI-SeedVR2_VideoUpscaler

./: CONTRIBUTING.md  LICENSE  README.md  __init__.py  inference_cli.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
configs_3b/: main.yaml
configs_7b/: main.yaml
example_workflows/: SeedVR2_4K_image_upscale.json  SeedVR2_HD_video_upscale.json  SeedVR2_simple_image_upscale.json
src/: __init__.py
src/common/: config.py
src/common/diffusion/samplers/: euler.py
src/common/distributed/: basic.py
src/core/: __init__.py  alpha_upscaling.py  generation.py  generation_phases.py  generation_utils.py  infer.py  model_cache.py  model_configuration.py  model_loader.py  model_manager.py
src/data/image/transforms/: area_resize.py  na_resize.py  side_resize.py
src/interfaces/: __init__.py  comfyui_node.py  dit_model_loader.py  torch_compile_settings.py  vae_model_loader.py  video_upscaler.py
src/models/dit_3b/: attention.py  modulation.py  na.py  normalization.py  rope.py
src/models/dit_3b/nablocks/attention/: mmattn.py
src/models/dit_7b/: attention.py  modulation.py  na.py  normalization.py  rope.py
src/models/dit_7b/nablocks/: mmsr_block.py
src/models/video_vae_v3/modules/: attn_video_vae.py  causal_inflation_lib.py
src/optimization/: blockswap.py  compatibility.py  gguf_dequant.py  gguf_ops.py  memory_manager.py  performance.py
src/utils/: color_fix.py  constants.py  debug.py  downloads.py  model_registry.py  vae_rgba_adapter.py
