[project]
name = "ComfyUI-SeedVR2_VideoUpscaler"
version = "2.0.0"
description = "ComfyUI integration of ByteDance-Seed's SeedVR2: One-step diffusion-based video/image upscaling with memory-efficient inference"
authors = [
    {name = "numz"},
    {name = "adrientoupet"}
]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "torch",
    "torchvision",
    "safetensors",
    "numpy",
    "tqdm",
    "psutil",
    "einops",
    "omegaconf>=2.3.0",
    "diffusers>=0.33.1",
    "rotary_embedding_torch>=0.5.3",
    "opencv-python",
]

[project.urls]
Homepage = "https://github.com/numz/ComfyUI-SeedVR2_VideoUpscaler"
Repository = "https://github.com/numz/ComfyUI-SeedVR2_VideoUpscaler"
Issues = "https://github.com/numz/ComfyUI-SeedVR2_VideoUpscaler/issues"
Tutorial = "https://www.youtube.com/@AInVFX"

[tool.comfy]
PublisherId = "numz"
DisplayName = "ComfyUI-SeedVR2_VideoUpscaler"
Icon = ""